# url-shortener

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 5b3b6c965bc8_create_urls_table.py
app/: main.py
app/api/: url_router.py
app/core/: config.py  db.py  deps.py
app/models/: url_model.py
app/repositories/: url_repository.py
app/schemas/: url_schema.py
app/services/: url_service.py
